--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -15,3 +17,4 @@
 
   text-align: center;
 }
+
