--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
   font-style: normal;
 }
 
-.img.horizontal{
+.img-horizontal{
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
