--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,12 @@
   object-fit: cover;
 }
 
-[class*="vh-50"] {
-  height: 50vh;
-}
-
 [class*="vh-5"] {
   height: 5vh;
+}
+
+.vh-50 {
+  height: 50vh !important;
 }
 
 [class*="display-1"] {
@@ -40,36 +40,43 @@
 }
 
 
-#f1_container {
-  position: relative;
-  width: 50px;
-  height: 30px;
+.bg-body-tertiary{
+  --bs-bg-opacity: 0;
 }
-#f1_container {
-  /* perspective: 1000; */
+
+.flip-container {
+  perspective: 800px;
+  width: 40px;   /* Ajusta al tamaño de tus imágenes */
+  height: 40px;
+  display: inline-block;
 }
-#f1_card {
+
+.flipper {
   width: 100%;
   height: 100%;
+  position: relative;
+  transition: transform 1.5s cubic-bezier(0.4, 2, 0.3, 1);
   transform-style: preserve-3d;
-  transition: all 1.0s linear;
-  position: relative;
 }
-#f1_container:hover #f1_card {
+
+.flip-container:hover .flipper {
   transform: rotateY(180deg);
 }
-.face {
-  position: absolute;
+
+.front, .back {
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0; left: 0;
+  backface-visibility: hidden;
+  border-radius: 50%; /* Opcional, si tu logo es redondo */
 }
-.face.back {
+
+.back {
   transform: rotateY(180deg);
 }
-.face img{
-	height:100%;
-	width:100%;
-}
+
+
 
 .footer-enhanced {
   background: #0f0f0f;
