--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto Slab", serif;
+  font-family: "Instrument Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   scroll-behavior: auto !important;
+  color: var(--color-silver);
+}
+
+:root {
+  --color-canto: #BA816D;
+  --color-silver: #C4C4C4;
+}
+body {
+  background-color: #0f0f0f;
+}
+
+.navbar-brand {
+  color: var(--color-silver);
+}
+
+.navbar-brand:hover {
+  color: var(--color-silver);
 }
 
 .img-horizontal{
@@ -35,8 +52,10 @@
   z-index: 2; /* Opcional, para que esté delante de otros elementos */
 }
 
+
 [class*="display-1"] {
-  font-weight: 400;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
 [class*="hf"] {
@@ -51,6 +70,12 @@
   font-style: normal;
 }
 
+.h5 {
+  color: var(--color-canto);
+}
+
+[class*="cp"] {
+}
 
 .bg-body-tertiary{
   --bs-bg-opacity: 0;
