--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ body {
   border-color: rgba(0, 0, 0, 0.1) !important;
 }
 .footer-enhanced {
-  animation: footerFadeUp .7s ease;
+  animation: footerFadeUp 1.3s ease;
 }
 
 @keyframes footerFadeUp {
